fix overflow

--- a/src/css/guitar.css
+++ b/src/css/guitar.css
@@ -17,5 +17,5 @@
 .guitar-neck {
   margin-bottom: 10px;
   overflow-x: auto;
-  width: 100vw;
+  width: 100%;
 }
